# ex618_kafka_001

./: CMakeLists.txt  README.md
inc/: application_c.h  application_g.h  background_worker.h  collable_class.h  from_file_reader.h  from_kafka_reader.h  in_file_writer.h  in_kafka_writer.h  kafka_consumer.h  kafka_producer.h  th_s_queue.h
main/: main_01.cpp  main_01_01.cpp  main_02.cpp  main_02_01.cpp  main_c_receiver.cpp  main_g_sender.cpp
src/: from_kafka_reader.cpp  in_kafka_writer.cpp  kafka_consumer.cpp  kafka_producer.cpp
